[package]
name = "mpw-emu"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.55"
bimap = "0.6.2"
binread = "2.2.0"
bitvec = "1"
chrono = "0.4.19"
env_logger = "0.9.0"
lazy_static = "1.4.0"
log = "0.4.14"
num = "0.4.0"
unicorn-engine = "2.0.1"
xattr = "0.2.2"
